RESOLVED FIXED82689
InsertHTML fails to insert h6 if the insertion point is before some text
https://bugs.webkit.org/show_bug.cgi?id=82689
Summary InsertHTML fails to insert h6 if the insertion point is before some text
Ryosuke Niwa
Reported 2012-03-29 22:36:07 PDT
WebKit fails to execute document.execCommand("insertHTML", false, '<h6>hello world</h6>'); properly (loses h6) if the selection at the time is before some text. Reduction: http://jsbin.com/isibud/3/ (Click "Insert h6"). I suspect this is a bug in markup.cpp. The list of elements there is missing h6 for some reason.
Attachments
First try (5.72 KB, patch)
2012-04-05 12:19 PDT, Yi Shen
rniwa: review+
Ryosuke Niwa
Comment 1 2012-03-29 22:36:21 PDT
Yi Shen
Comment 2 2012-04-05 08:35:24 PDT
The issue is the isHeaderElement() in ReplaceSelectionCommand doesn't include h6Tag. Will provide a patch with tests soon.
Yi Shen
Comment 3 2012-04-05 12:19:03 PDT
Created attachment 135874 [details] First try
Chang Shu
Comment 4 2012-04-12 12:20:47 PDT
Comment on attachment 135874 [details] First try The fix looks correct and neat. Did you run the entire layout tests?
Ryosuke Niwa
Comment 5 2012-04-12 12:24:11 PDT
Comment on attachment 135874 [details] First try View in context: https://bugs.webkit.org/attachment.cgi?id=135874&action=review > LayoutTests/editing/execCommand/4128080-1.html:15 > + if (actual == expected) > + return "Success\n"; Can we output something for Success case as well so that it'll be easier to understand the output?
Yi Shen
Comment 6 2012-04-12 12:49:32 PDT
Thanks for reviewing. I will update the test case and commit the patch then.
Yi Shen
Comment 7 2012-04-13 07:29:12 PDT
Note You need to log in before you can comment on or make changes to this bug.