InsertHTML fails to insert h6 if the insertion point is before some text. https://bugs.webkit.org/show_bug.cgi?id=82689

Reviewed by Ryosuke Niwa.

Added the missing h6 tag for the isHeaderElement.

Source/WebCore:

No new tests: updated existing test (editing/execCommand/4128080-1.html)

* editing/ReplaceSelectionCommand.cpp:
(WebCore::isHeaderElement):

LayoutTests:

* editing/execCommand/4128080-1-expected.txt:
* editing/execCommand/4128080-1.html:


Canonical link: https://commits.webkit.org/101413@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114131 268f45cc-cd09-0410-ab3c-d52691b4dbfc